# bistro-board

./: .env.example  .gitignore  README.md  download_sheet.py  fetch_emails.py  import_register.py  import_sales.py  philos_sales.db  pyproject.toml
.agents/: AGENTS.md
dashboard/: main.py
dashboard/static/: app.js  index.html  style.css
docs/: DEPLOYMENT.md  Kakkanad Business Register.xlsx  PROJECT_GUIDE.md  decoupling_plan.md
web/: .gitignore  README.md  agent.md  fix-dates.cjs  fix-mocks.cjs  package-lock.json  package.json  replace-dates.cjs  vercel.json  vite.config.ts
web/scripts/: check-income.ts  check-rows.ts  generate-config.ts  migrate-data.ts  seed-channels.ts
web/src/: app.css  app.d.ts  app.html  hooks.server.ts
web/src/lib/components/: ChannelFilter.svelte  DateRangeHeader.svelte  KPICard.svelte  ThemeToggle.svelte  Toast.svelte  UserDropdown.svelte
web/src/lib/server/: auth.ts  cache.ts  config.ts  csv.ts  logger.ts
web/src/lib/server/db/: index.ts  (+2 more)
web/src/lib/stores/: dateRange.test.ts  dateRange.ts  theme.svelte.ts  toast.ts
web/src/lib/utils/: chart-helpers.ts  date-filter.ts
web/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  navigation-tabs.ts
web/src/routes/__tests__/: auth-protection.test.ts  date-range-integration.test.ts  error-handling.test.ts  layout.server.test.ts  layout.ui.test.ts  overview-charts.test.ts  overview-controls.test.ts  overview-kpis.test.ts  overview-navigation.test.ts  overview-pnl.test.ts  overview-velocity.test.ts
web/src/routes/businesses/: +page.server.ts  +page.svelte
(+62 files in other folders)
