[project]
name = "bistro-board"
version = "0.2.0"
description = "Multi-channel restaurant analytics platform — data import scripts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "google-auth>=2.0.0",
    "requests>=2.20.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
